✨ Update author to @i-am-paradox and fix repo links

--- a/resume.tex
+++ b/resume.tex
@@ -16,7 +16,7 @@
 %
 %                    PREMIUM RESUME TEMPLATE
 %                  Open Source | MIT License
-%               https://github.com/yourusername
+%               https://github.com/i-am-paradox/resume
 %
 %     Features:
 %     ✓ Ultra-Premium Design with TikZ Graphics
@@ -28,7 +28,7 @@
 %     ✓ Single Page A4 Layout
 %     ✓ 100% Customizable Colors
 %
-%     Author: Your Name
+%     Author: @i-am-paradox
 %     Version: 1.0.0
 %     Last Updated: January 2025
 %
