Update name on resume to 'p'

--- a/resume.tex
+++ b/resume.tex
@@ -272,7 +272,7 @@
     %========================================
     % Without photo - centered name
     \node[anchor=center, font=\fontsize{24}{28}\selectfont\bfseries, text=white] 
-        at (0.5\textwidth, 2.4cm) {ALEX JOHNSON};
+        at (0.5\textwidth, 2.4cm) {Paradox};
     
     \node[anchor=center, font=\large, text=champagne] 
         at (0.5\textwidth, 1.9cm) {\textsc{Full Stack Developer | Cloud Architect}};
